fix resource handling for minecraft_missing_texture.png
CMakeLists.txt: remove minecraft_missing_texture.png from RESOURCES list
resources.qrc: add minecraft_missing_texture.png as a qresource file
Main.qml: correct image source path to use qrc resource system

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/">
+        <file>assets/images/minecraft_missing_texture.png</file>
     </qresource>
 </RCC>
