--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource prefix="/">
+        <file>assets/conf.default.json</file>
     </qresource>
 </RCC>
